# hecate-sentinel

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  compose.yaml  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: 2312cebf85bb_add_service_api_keys.py  71ef6590f079_add_uuid_to_all_models.py  ac3f0632be82_add_expires_on_to_users.py  be22f3475423_initial_schema.py  bfba6d265aa7_create_initial_admin_user.py
docs/: api-guide.rst  conf.py  configuration.rst  deployment.rst  index.rst  installation.rst  interservice.rst  overview.rst
docs/features/: authentication.rst  authorization.rst  index.rst  security.rst  session-management.rst  user-management.rst
docs/reference/: api.rst  core.rst  index.rst  models.rst  schemas.rst  services.rst
src/: __init__.py  main.py
src/api/: auth.py  dependencies.py  emails.py  groups.py  oauth_accounts.py  permissions.py  phones.py  security.py  sessions.py  users.py
src/core/: database.py  email_sender.py  geoip.py  logging.py  migrations.py  oauth.py  request_context.py  security.py  settings.py  totp.py  user_agent.py
src/models/: __init__.py  audit_log.py  email.py  email_verification.py  group.py  known_device.py  known_location.py  oauth_account.py  oauth_state.py  password_reset.py  permission.py  phone.py  recovery_code.py  service_api_key.py  session.py  totp_pending.py  user.py
src/schemas/: audit.py  auth.py  base.py  device.py  email.py  group.py  introspect.py  oauth.py  oauth_account.py  permission.py  phone.py  session.py  totp.py  (+1 more)
tests/: __init__.py  conftest.py
(+27 files in other folders)
